trustfall_core/test_data/tests/parse_errors/fold_and_output.parse-error.ron
Err(UnsupportedDirectivePosition("@output", "this directive can only be used together with @fold if it\'s placed after `@fold @transform(op: \"count\")`", Pos(
  line: 4,
  column: 42,
)))
